traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:21: error: type mismatch;
 found   : Unit
 required: Boolean
  if((getX() == getMondeLargeur()) && (getY()== getMondeHauteur())){
  ^